WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
135572
[MSE] Further fixes for "fast forward" playback after seeking in YouTube behavior.
https://bugs.webkit.org/show_bug.cgi?id=135572
Summary
[MSE] Further fixes for "fast forward" playback after seeking in YouTube beha...
Jer Noble
Reported
2014-08-04 13:17:12 PDT
[MSE] Further fixes for "fast forward" playback after seeking in YouTube behavior.
Attachments
Patch
(2.93 KB, patch)
2014-08-04 13:30 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-08-04 13:30:25 PDT
Created
attachment 235984
[details]
Patch
Eric Carlson
Comment 2
2014-08-04 13:36:42 PDT
Comment on
attachment 235984
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235984&action=review
> Source/WebCore/Modules/mediasource/SourceBuffer.cpp:1211 > + if (presentationTimestamp > MediaTime::createWithDouble(m_source->currentTime())) {
Should this be >= instead of > ?
Jer Noble
Comment 3
2014-08-04 13:39:11 PDT
(In reply to
comment #2
)
> (From update of
attachment 235984
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=235984&action=review
> > > Source/WebCore/Modules/mediasource/SourceBuffer.cpp:1211 > > + if (presentationTimestamp > MediaTime::createWithDouble(m_source->currentTime())) { > > Should this be >= instead of > ?
Good point. In fact, this should probably be >, but checking against frameEndTimestamp. I.e., if the frame spans the currentTime (where the start time is <= but the end time is >), we should add the sample to the decode queue.
Jer Noble
Comment 4
2014-08-04 13:55:21 PDT
Committed
r172000
: <
http://trac.webkit.org/changeset/172000
>
Jer Noble
Comment 5
2014-08-04 14:59:51 PDT
Rolled out in
r172007
<
http://trac.webkit.org/r172007
>. Re-opening.
Jon Lee
Comment 6
2014-08-04 15:59:33 PDT
<
rdar://problem/17856763
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug