[MSE] Further fixes for "fast forward" playback after seeking in YouTube behavior. https://bugs.webkit.org/show_bug.cgi?id=135572

Reviewed by Eric Carlson.

Two related fixes:

In reenqueueMediaForTime(), update TrackBuffer.lastEnqueuedPresentationTime when we flush samples, so that
the next time samples are re-enqueued, the starting point for re-enqueueing is correct.

In sourceBufferPrivateDidReceiveSample(), do not add samples to the decode queue if they are before the
current media time.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveSample):
(WebCore::SourceBuffer::reenqueueMediaForTime):

Canonical link: https://commits.webkit.org/153443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172000 268f45cc-cd09-0410-ab3c-d52691b4dbfc